# post_automation

./: .gitignore  README.md  pyproject.toml
src/post_automation/: crew.py  main.py
src/post_automation/config/: agents.yaml  tasks.yaml
src/post_automation/data/: curriculo_ian.md  linkedin_ai.md
