[project]
name = "post_automation"
version = "0.1.0"
description = "post_automation using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
post_automation = "post_automation.main:run"
run_crew = "post_automation.main:run"
train = "post_automation.main:train"
replay = "post_automation.main:replay"
test = "post_automation.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
